--- a/package.json
+++ b/package.json
@@ -21,6 +21,6 @@
   },
   "homepage": "https://github.com/artur-rso/artur-rios-website#readme",
   "dependencies": {
-    "simple-user-interface-components": "^0.0.6"
+    "suic-agnostic": "^0.0.10"
   }
 }
